--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,11 @@ spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
 # oracle
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=miso
 spring.datasource.password=1234
+
+mybatis.type-aliases-package=springbootmvcshopping.domain
