--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=springBootMVCShopping
 
+# static ?? ?? ??
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.add-mappings=true
+
 server.port=8080
 
 spring.thymeleaf.cache=false
