--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--email API 무료이기 때문에 이 api는 극소수만 사용 (기능제한)-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.nurigo</groupId>
+            <artifactId>sdk</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
