--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,11 @@ spring.datasource.password=1234
 
 mybatis.type-aliases-package=springbootmvcshopping.domain
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#?? ???
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=soongmoostudent
+spring.mail.password=zlyz zokn prwn dcun
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
