--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,7 @@ spring.mail.username=soongmoostudent
 spring.mail.password=zlyz zokn prwn dcun
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#?? ??
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
